--- a/public/pages/home/style.css
+++ b/public/pages/home/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     --primary-padding: 0px 30px;
     --margin-bottom: 0px 0px 60px 0px;
@@ -333,33 +334,7 @@ body::before {
     z-index: -1;
 }
 
-.about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background: url(/src/wave-haikei.svg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Lato', sans-serif;
-    min-height: 100vh;
-    overflow: hidden;
-    z-index: 1;
-    /* padding: 0px 30px 60px 30px; */
-}
-
-.about-section-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Lato', sans-serif;
-    padding: 0px 10px;
-}
-
-.departments-section { 
+.departments-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -379,7 +354,7 @@ body::before {
 }
 
 .departments-text {
-    font-family: "Lexend",  sans-serif;
+    font-family: "Lexend", sans-serif;
     font-size: 1.8rem;
     font-weight: 550;
     line-height: 1;
@@ -392,9 +367,11 @@ body::before {
 .image-accordion {
     display: flex;
     margin-top: 24px;
-    gap: 10px;
+    gap: 8px;
     width: 100%;
+    height: 100dvh;
     max-width: 1200px;
+    flex-direction: column;
 }
 
 .image-block {
@@ -402,7 +379,8 @@ body::before {
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
-    height: 400px;
+    max-height: 400px;
+    height: auto;
     flex: 1;
     transition: all 500ms ease;
     filter: grayscale(90%);
@@ -456,8 +434,9 @@ body::before {
 .image-block.expanded .details {
     background: rgba(0, 0, 0, 0);
 }
+
 .image-block.expanded .details .details__info {
-    writing-mode:horizontal-tb;
+    writing-mode: horizontal-tb;
     transform: rotate(0deg);
 }
 
@@ -919,15 +898,19 @@ span.prev {
 .fade-slide:nth-child(2) {
     background-image: url(/src/slide-2.JPG);
 }
+
 .fade-slide:nth-child(3) {
     background-image: url(/src/slide-3.jpg);
 }
+
 .fade-slide:nth-child(4) {
     background-image: url(/src/slide-4.JPG);
 }
+
 .fade-slide:nth-child(5) {
     background-image: url(/src/slide-5.jpg);
 }
+
 /* .fade-slide:nth-child(6) {
     background-image: url(/src/slide-6.jpg);
 } */
@@ -1045,8 +1028,8 @@ span.prev {
     font-family: 'Roboto', sans-serif;
 }
 
-.text-group, 
-.text-group-2{
+.text-group,
+.text-group-2 {
     display: grid;
     grid-template-columns: 1fr;
     font-weight: 600;
@@ -1057,15 +1040,21 @@ span.prev {
 
 
 @keyframes textFadeInOut {
-    0%, 20% {
+
+    0%,
+    20% {
         filter: blur(8px);
         opacity: 0;
     }
-    30%, 70% {
+
+    30%,
+    70% {
         filter: blur(0px);
         opacity: 1;
     }
-    80%, 100% {
+
+    80%,
+    100% {
         filter: blur(8px);
         opacity: 0;
     }
@@ -1142,13 +1131,15 @@ span.prev {
     object-fit: cover;
     z-index: -1;
 }
-.reach-section-wrapper .reach-section-text{
+
+.reach-section-wrapper .reach-section-text {
     position: relative;
-    font-size: 72px;
+    font-size: 48px;
     font-weight: 700;
-    line-height: 100px;
+    line-height: 1.1;
     z-index: 1;
     max-width: 550px;
+    color: #316FF6;
     font-family: "DM Sans", Sans-serif;
 }
 
@@ -1167,8 +1158,8 @@ span.prev {
     height: 100%;
     background: url(/src/layered-waves.svg);
     background-position: center;
-        z-index: 0;
-        background-size: cover;
+    z-index: 0;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -1191,11 +1182,11 @@ span.prev {
     width: 100%;
     border-radius: 12px;
     background: #000000;
-    border: 1px  solid;
+    border: 1px solid;
     height: 100%;
 }
 
-.last-section .mission-text{
+.last-section .mission-text {
     max-width: 700px;
     text-align: left;
     position: relative;
@@ -1203,7 +1194,8 @@ span.prev {
     display: flex;
     gap: 8px;
     flex-direction: column;
-    color: #fff;;
+    color: #fff;
+    ;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -1231,7 +1223,7 @@ span.prev {
     /* background: #04125c; */
     color: #ffff;
     -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px); 
+    backdrop-filter: blur(4px);
     position: relative;
     padding: 15px 30px;
     z-index: 1;
@@ -1257,15 +1249,21 @@ span.prev {
     grid-template-columns: 1fr auto;
     font-size: 1rem;
     gap: 6px;
-    flex:1;
+    flex: 1;
     position: relative;
     text-align: left;
 }
 
-.live-services-wrapper .right__ img {
+
+
+.live-services-wrapper .right__ {
+    position: relative;
+    z-index: 0;
+}
+
+.live-services-wrapper .right__ .live__image {
     width: 100%;
     display: none;
-    position: relative;
     max-width: 350px;
     border-radius: 12px;
     height: auto;
@@ -1274,6 +1272,7 @@ span.prev {
 .live-services-wrapper .left__ .title__ {
     font-family: "lexend", sans-serif;
     list-style: 1.1;
+    font-weight: 600;
     font-size: 1.8rem;
 }
 
@@ -1288,6 +1287,7 @@ span.prev {
 .left__ .desc__ p:nth-child(2) {
     margin-bottom: 8px;
 }
+
 .left__ .desc__ p:nth-child(3),
 .left__ .desc__ p:nth-child(4) {
     font-weight: bold;
@@ -1296,7 +1296,7 @@ span.prev {
 .live-services-wrapper .left__ .buttons__ {
     font-size: 1rem;
     display: flex;
-    width: 100px;
+    /* width: 100px; */
     max-height: min-content;
     align-self: center;
     flex-direction: column;
@@ -1331,8 +1331,93 @@ span.prev {
     background: #92BDF9;
 }
 
+.right__ .play__button {
+    display: none;
+}
 
+.ministry-section {
+    position: relative;
+    background: url(/src/wave-haikei.svg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    overflow: hidden;
+    padding: var(--primary-padding);
+    z-index: 1;
+    /* padding: 0px 30px 60px 30px; */
+}
 
+.ministry-section-container {
+    display: grid;
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 12px;
+    padding: 5px 0px 60px 0px;
+
+}
+
+.articles-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 12px 8px;
+    justify-content: space-between;
+    gap: 8px;
+    /* min-width: 250px; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgb(255, 255, 255, 0.5);
+}
+
+.articles-box .box__image {
+    width: 100%;
+    border-radius: 12px;
+    height: 190px;
+}
+
+.articles-box .box__image img {
+    object-fit: cover;
+    border-radius: 12px;
+    border: 1px solid #316FF6;
+    width: 100%;
+    height: 100%;
+}
+
+.articles-box .box__text {
+    font-size: 0.875rem;
+    font-weight: bold;
+    flex: 1;
+    color: hsl(0, 0%, 15%);
+    text-align: left;
+}
+
+.articles-box .box__button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 5px;
+    width: 100%;
+}
+
+.box__button .button_ {
+    border: 3px solid #316FF6;
+    color: #000000;
+    background: none;
+    font-weight: bold;
+    padding: 8px 16px 8px 8px;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 500ms ease;
+    font-size: 1rem;
+}
+
+.box__button .button_:hover {
+    background: #316FF6;
+    color: #fff;
+}
 
 @media (min-width: 992px) {
     .navbar-box {
@@ -1367,6 +1452,10 @@ span.prev {
         background-size: contain;
         position: relative;
 
+    }
+
+    .reach-section-wrapper .reach-section-text {
+        font-size: 72px;
     }
 }
 
@@ -1416,15 +1505,18 @@ span.prev {
     .dup-txt span:nth-child(even) {
         -webkit-text-stroke: 3px #316FF6;
     }
+
     .fade-indicators {
         top: 50%;
         left: 95%;
         flex-direction: column;
         transform: translateX(0%);
     }
+
     .fade-slideshow {
         height: 120vh;
     }
+
     .fade-text {
         top: 30%;
         left: 0;
@@ -1436,19 +1528,21 @@ span.prev {
     .first-slide-text:nth-child(4) {
         font-size: 2rem;
     }
-    
-    .text-group, 
-    .text-group-2{
+
+    .text-group,
+    .text-group-2 {
         grid-template-columns: 1fr;
         font-weight: 800;
         text-align: left;
         line-height: 1.1;
         max-width: 550px;
     }
+
     .fade-indicator.active {
         height: 18px;
         width: 10px;
     }
+
     .fade-indicator.active::before {
         transform: translateY(-14px);
     }
@@ -1458,6 +1552,7 @@ span.prev {
             transform: translateY(0px);
         }
     }
+
     .reach-section-wrapper {
         height: 100dvh;
     }
@@ -1473,80 +1568,133 @@ span.prev {
         -webkit-backdrop-filter: blur(2.8px);
         backdrop-filter: blur(2.8px);
     }
-    .reach-section-wrapper .reach-section-text{
-        font-size: 72px;
+
+    .reach-section-wrapper .reach-section-text {
         letter-spacing: 1.2px;
         max-width: 750px;
         color: #316FF6;
     }
+
     .departments-text {
         font-size: 3rem;
         font-weight: 600;
         line-height: 1;
     }
+
     .last-section-wrapper {
         gap: 85px;
         /* align-items: center; */
         justify-content: flex-start;
     }
+
     .last-section img {
         max-width: 325px;
     }
+
     .reach-section-wrapper video {
         width: 110%;
     }
+
     .live-services-wrapper {
         color: #ffff;
         gap: 5%;
         padding: 15px 45px;
         justify-content: space-around;
     }
+
     .live-services-wrapper .left__ {
         grid-template-columns: 1fr;
         height: 100%;
         gap: 8px;
     }
+
     .live-services-wrapper .left__ .title__ {
         font-size: 3rem
     }
+
     .live-services-wrapper .left__ .desc__ {
         font-size: 1rem;
         display: grid;
     }
 
-    .live-services-wrapper .right__ img {
+    .live-services-wrapper .right__ .live__image {
         display: block;
     }
 
+    .live-services-wrapper .right__::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        border-radius: 12px;
+        background: rgb(0, 0, 0, 0.2);
+    }
+
+    .right__ .play__button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+        width: 100%;
+        max-width: 85px;
+    }
+
+
     .live-services-wrapper .left__ .buttons__ {
         flex-direction: row;
-        width: 220px;
+        max-width: 280px;
         margin-top: 24px;
         grid-column: 1;
         grid-row: 3;
         gap: 12px;
     }
+
     .left__ button {
         display: flex;
     }
+
+    .image-accordion {
+        display: flex;
+        margin-top: 24px;
+        gap: 10px;
+        height: none;
+        max-height: 60dvh;
+        width: 100%;
+        max-width: 1200px;
+        flex-direction: row;
+    }
+
+    .image-block {
+        max-height: 400px;
+        height: auto;
+        flex: 1;
+    }
+
 }
 
 @media (max-width: 600px) {
-    :root{
+    :root {
         --primary-padding: 0px 15px;
     }
-    
+
     .navbar-box {
         padding: 40px 25px;
     }
+
     .landing-page-main-sub-title {
         width: 75%;
     }
+
     .live-services-wrapper .left__ .buttons__ {
         margin-top: 16px;
         grid-column: 1;
         grid-row: 3;
     }
+
     .live-services-wrapper .left__ {
         grid-template-columns: 1fr;
         height: 100%;
